fp-library/tests/ui/thunk_not_send.stderr
error[E0277]: `dyn FnOnce() -> i32` cannot be sent between threads safely
  --> tests/ui/thunk_not_send.rs:8:21
   |
 8 |       std::thread::spawn(move || {
   |  _____------------------_^
   | |     |
   | |     required by a bound introduced by this call
 9 | |         thunk.evaluate();
10 | |     });
   | |_____^ `dyn FnOnce() -> i32` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `dyn FnOnce() -> i32`
   = note: required for `Unique<dyn FnOnce() -> i32>` to implement `Send`
note: required because it appears within the type `Box<dyn FnOnce() -> i32>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Thunk<'_, i32>`
  --> src/types/thunk.rs
   |
   |     pub struct Thunk<'a, A>(
   |                ^^^^^
note: required because it's used within this closure
  --> tests/ui/thunk_not_send.rs:8:21
   |
 8 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
help: use parentheses to call this trait object
   |
10 |     }());
   |      ++
